<resources>
    <string name="app_name">trackit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Repeat password</string>
    <string name="reset_password">Forgot password?</string>
    <string name="username_hint">Username</string>
    <string name="login_greetings">Good Day!</string>
    <string name="login_sub_header">Enter your email and password</string>
    <string name="login_btn">Login</string>
    <string name="dont_have_account">No account?</string>
    <string name="register_btn">Register</string>
    <string name="login_google">Sign in with google</string>
    <string name="registration_header">Registration</string>
    <string name="registration_sub_header">Fill all forms to register account</string>
    <string name="have_account">Have account?</string>


    <string name="reset_password_title">Password reset</string>
    <string name="reset_password_request">Enter your email, we will send link to reset your password</string>

    <string name="email_error">The email address is badly formatted.</string>
    <string name="password_error">Password must be longer than 6 elements and contain al least one digit</string>
    <string name="password_confirmation_error">Passwords do not match</string>
    <string name="empty_error">Please fill that form</string>
    <string name="username_to_short">Username should contain at least 6 elements</string>
    <string name="username_to_long">Username can not be more than 30 characters</string>


    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>

    <string name="notifications">Notifications</string>
    <string name="your_projects">Your current active projects</string>


    <string name="spinner">spinner</string>


    <string name="notification_key">AAAAEw7wSXo:APA91bFNZq-NQrWH6V45xgbG1YyzuhBgxocTirh3jlrMnLpHoIik28S5BnukAhS8L8RfF1eFWzRqaVf5t5m_u7CiZ9Y4vtdcJUgxSRvzxMPMmiPoy5yPYD2vOETDTywhwlM38lRTrBdG</string>
</resources>